# opencurrent

./: .gitignore  CMakeLists.txt  EnforcingBoundaryConditionsInMultigrid.md  FluxConservativeAdvection.md  MainDoc.md  OpenCurrent.md  OpenCurrentEquation.md  OpenCurrentStorage.md  OpenCurrentUtil.md  ProjectHome.md  README  RoadMap.md  System.cmake.src
CMake/cmake_modules/: FindNetCDF.cmake
CMake/cuda/: FindCUDA.cmake
apps/: CMakeLists.txt  cubicrayleigh.cpp  eqn_cubicrayleigh3d.cu  lockex.cpp  pcg.cpp
ocuequation/: eqn_diffusion1d.h  eqn_diffusion3d.cpp  eqn_incompressns3d.cu  eqn_incompressns3d.h  error_handler.h  parameters.h  sol_divergence3ddev.cu  sol_gradient3d.h  sol_laplaciancent1ddev.cu  sol_mgpressure3d.cpp  sol_mgpressure3dco.cu  sol_mgpressure3ddev.cu  sol_mgpressure3ddevd.cu  sol_mgpressure3ddevf.cu  sol_mgpressuremixed3ddevd.cpp  sol_pcgpressure3d.cu  sol_pcgpressure3d.h  sol_project3d.cpp  sol_project3ddev.cu  solver.cu  solver.h
ocustorage/: CMakeLists.txt  coarray_internal.h  grid1d.h  grid1ddev.cu  grid1dhost.cu  grid1dops.cu  grid1dops.h  grid2d.h  grid2ddev.cu  grid2dhost.cpp  grid3d.cpp  grid3dboundary.cu  grid3dboundary.h  grid3ddev.cu  grid3dhost.cu  grid3dops.cpp  grid3dops.cu  grid3dops.h  grid3dsample.h  gridnetcdf.h  transfer_q.cu
ocuutil/: CMakeLists.txt  color.h  direction.h  float_routines.h  imagefile.h  kernel_wrapper.cu  thread.cu  timestep.h  timing_pool.cpp
src/: CMakeLists.txt  README  System.cmake.src
src/apps/: CMakeLists.txt  eqn_cubicrayleigh3d.cu  eqn_cubicrayleigh3d.h  incompress.cpp  lockex.cpp  pcg.cpp  testapp.cpp
src/ocuequation/: CMakeLists.txt  eqn_diffusion1d.cpp  eqn_diffusion1d.h  eqn_diffusion1dco.cu  eqn_diffusion3d.cpp  eqn_diffusion3d.h  eqn_incompressns3d.cpp  eqn_incompressns3d.cu  eqn_incompressns3d.h  eqn_scalaradvection3d.cpp  eqn_scalaradvection3d.h  equation.cpp  equation.h  laplaciancent1ddev.h  sol_divergence3d.h  sol_divergence3ddev.cu  sol_gradient3ddev.cu  sol_laplaciancent1d.h  sol_laplaciancent1dco.cu  sol_laplaciancent1ddev.cu  sol_laplaciancent1dhost.cpp  sol_laplaciancent3d.h  sol_laplaciancent3ddev.cu  sol_mgpressure3d.cpp  sol_mgpressure3d.h  sol_mgpressure3dco.cu  sol_mgpressure3ddev.cu  sol_mgpressure3ddevd.cu  sol_mgpressure3ddevf.cu  sol_mgpressuremixed3d.h  sol_mgpressuremixed3ddevd.cpp  sol_passiveadvection3d.h  sol_passiveadvection3ddev.cu  sol_pcgpressure3d.cu  sol_project3d.h  sol_project3ddev.cu  sol_projectmixed3d.cu  sol_projectmixed3d.h  sol_selfadvection3d.h  sol_selfadvection3ddev.cu  (+2 more)
src/ocustorage/: CMakeLists.txt  barrier_exchange.cu  coarray.cu  coarray.h  coarray_internal.h  exchange_mempool.cu  grid1d.h  grid1ddev.cu  grid1dhost.cpp  grid1dhost.cu  grid1dops.cu  grid2ddev.cu  grid2dhost.cu  grid3d.h  grid3dboundary.cu  grid3ddev.cu  grid3ddev.linkinfo  grid3dhost.cpp  grid3dhost.cu  grid3dops.cu  grid3dsample.cu  gridnetcdf.cpp  gridnetcdf.h  region1d.h  region3d.h  transfer_q.cu  transfer_routines.cu
src/ocuutil/: CMakeLists.txt  boundary_condition.h  convergence.h  defines.h  float_routines.h  imagefile.cpp  interpolation.h  kernel_wrapper.cu  kernel_wrapper.h  memory.cu  memory.h  reduction_op.h  thread.cu  thread.h  timer.cu  timing_pool.h
src/tests/: CMakeLists.txt  advection3dtest.cpp  coarraytest.cu  diffusion3dmultitest.cu  grid3dtest.cpp  lockextest.cpp  mgdoubletest.cpp  mgmixedtest.cpp  mgmultitest.cu  mgtest.cpp  netcdftest.cpp  nstest.cpp  pcgtest.cpp  projecttest.cpp  rayleightiming.cpp  samplingtest.cpp  testframework.cpp  testframework.h  utest.cu
tests/: advection3ddoubletest.cpp  diffusion1dmultitest.cu  diffusion1dtest.cpp  diffusion3dtest.cpp  grid1dtest.cpp  mgtest.cpp  netcdftest.cpp  projectdoubletest.cpp  rayleigh.cpp  rayleighnoslip.cpp  testframework.cpp  utest.cu
